--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,5 +5,5 @@
   <h4>{{ product.price | currency }}</h4>
   <p>{{ product.description }}</p>
 
-  <button type="button" name="button"></button>
+  <button (click)="addToCart(product)">Buy</button>
 </div>
